--- a/src/app/kailash-math/kailash-math.component.html
+++ b/src/app/kailash-math/kailash-math.component.html
@@ -19,7 +19,7 @@
 
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="1000">
-          <img src=".././assets/imgs/banners/temple-swami.jpg" class="d-block w-100" alt="...">
+          <img src="https://ik.imagekit.io/kailash/swami-ashu/banners/tr:pr-true/temple-swami.jpg?updatedAt=1686834857042" class="d-block w-100" alt="...">
           <a href="">
             <div class="carousel-caption">
               <p class="caption-text">अधिक जाने</p>
@@ -27,7 +27,7 @@
           </a>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src=".././assets/imgs/banners/temple-swami.jpg" class="d-block w-100" alt="...">
+          <img src="https://ik.imagekit.io/kailash/swami-ashu/banners/tr:pr-true/temple-swami.jpg?updatedAt=1686834857042" class="d-block w-100" alt="...">
           <a href="">
             <div class="carousel-caption ">
               <p class="caption-text">अधिक जाने</p>
@@ -35,7 +35,7 @@
           </a>
         </div>
         <div class="carousel-item">
-          <img src=".././assets/imgs/banners/temple-swami.jpg" class="d-block w-100" alt="...">
+          <img src="https://ik.imagekit.io/kailash/swami-ashu/banners/tr:pr-true/temple-swami.jpg?updatedAt=1686834857042" class="d-block w-100" alt="...">
           <a href="">
             <div class="carousel-caption">
               <p class="caption-text">अधिक जाने</p>
