--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -41,13 +41,13 @@
               ऑनलाइन
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">पूजा बुकिंग</a></li>
-              <li><a class="dropdown-item" href="#">दान</a></li>
-              <li><a class="dropdown-item" href="#">पुस्तकालय</a></li>
-              <li><a class="dropdown-item" href="#">पत्रिका सदस्यता</a></li>
-              <li><a class="dropdown-item" href="#">आवास बुकिंग</a></li>
+              <li><a routerLink="/pooja-booking" class="dropdown-item" href="#">पूजा बुकिंग</a></li>
+              <li><a routerLink="/donation" class="dropdown-item" href="#">दान</a></li>
+              <li><a routerLink="/library" class="dropdown-item" href="#">पुस्तकालय</a></li>
+              <li><a routerLink="/magazine-membership" class="dropdown-item" href="#">पत्रिका सदस्यता</a></li>
+              <li><a routerLink="/room-booking" class="dropdown-item" href="#">आवास बुकिंग</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">दान</a></li>
+              <li><a routerLink="/donation" class="dropdown-item" href="#">दान</a></li>
             </ul>
           </li>
         </ul>
