--- a/src/app/brandbar/brandbar.component.html
+++ b/src/app/brandbar/brandbar.component.html
@@ -1,7 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div class="bg-warning fixed-top row">
-    <!-- <div class="col"></div> -->
-    <div class="d-flex col justify-content-center">
-        <img class="brand-imaage px-3" src="../../assets/svg/header/kashi.svg" alt="" srcset="">
-    </div>
+        <img class="brand-image" src="../../assets/svg/brand-logo/kailash-brand-logo.svg" alt="" srcset="">
+    
 </div>
