--- a/src/app/mahamandaleswar-card/mahamandaleswar-card.component.html
+++ b/src/app/mahamandaleswar-card/mahamandaleswar-card.component.html
@@ -9,15 +9,11 @@
                 </svg> -->
             </div>
             <h5 class="card-title text-primary mb-1">{{receivedData['name']}}</h5>
-            <div class="text-muted">जन्म तिथि : {{receivedData['dob']}}</div>
-
+            <hr>
             <div>
-
+                <div class="">जन्म तिथि : {{receivedData['dob']}}</div>
                 <p class="mt-2 mb-1">महामंडलेश्वर का पद संतों और आध्यात्मिक गुरुओं की महत्वपूर्ण पदवी है, </p>
             </div>
-        </div>
-        <div class="card-footer card-footer two">
-            <a class="card-link text-primary read-more two" href="javascript://">Read</a>
         </div>
 
 
