--- a/src/app/kailash-math/kailash-math.component.scss
+++ b/src/app/kailash-math/kailash-math.component.scss
@@ -1,9 +1,9 @@
-#Layer_1{
+#Layer_1 {
   position: fixed;
   top: 0;
 }
 
-.carouselExampleIndicators{
+.carouselExampleIndicators {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -26,16 +26,19 @@
   color: rgb(93, 12, 0);
   top: 0;
   left: 0;
-  overflow: hidden; /* Hides the overflowing text */
-  white-space: nowrap; /* Prevents the text from wrapping */
+  overflow: hidden;
+  /* Hides the overflowing text */
+  white-space: nowrap;
+  /* Prevents the text from wrapping */
 }
 
 .breaking-news marquee {
-  font-size: large;/* Initial position outside the container */
+  font-size: large;
+  /* Initial position outside the container */
 }
 
-.breaking-news a{
-  text-decoration:none;
+.breaking-news a {
+  text-decoration: none;
   background-color: black;
   padding: 5px;
   color: rgb(255, 221, 0);
@@ -43,7 +46,7 @@
   // text-shadow: 1px 1px 3px rgb(0, 0, 0), -1px -1px 3px black;
 }
 
-.breaking-news a:hover{
+.breaking-news a:hover {
   padding-left: 7px;
   padding-right: 7px;
 }
@@ -69,6 +72,7 @@
   0% {
     transform: translate(0, 0);
   }
+
   100% {
     transform: translate(-100%, 0);
   }
@@ -76,18 +80,23 @@
 
 @keyframes neon {
   0% {
-    color: #ffffff; /* Initial color */
+    color: #ffffff;
+    /* Initial color */
   }
+
   50% {
-    color: #ff0000; /* Middle color */
+    color: #ff0000;
+    /* Middle color */
   }
-  
+
   70% {
-    color: #ff00ea; /* Middle color */
+    color: #ff00ea;
+    /* Middle color */
   }
 
   100% {
-    color: #ffffff; /* Final color */
+    color: #ffffff;
+    /* Final color */
   }
 }
 
@@ -141,12 +150,12 @@
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
-.left-column {   
+.left-column {
   float: left;
   width: 70%;
 }
 
-.left-column div div{
+.left-column div div {
   margin: 0;
   padding: 0;
   // background-color: wheat;
@@ -160,7 +169,7 @@
   margin: 0 auto;
 }
 
-.container-loop .card{
+.container-loop .card {
   // height: 30%;
 }
 
@@ -170,16 +179,18 @@
   0% {
     transform: translate3d(0, 0, 0);
   }
+
   100% {
-    transform: translate3d(-100%, 0, 0); /* The image width */
+    transform: translate3d(-100%, 0, 0);
+    /* The image width */
   }
 }
 
-.art p{
+.art p {
   font-family: 'Sahitya';
 }
 
-.heading{
+.heading {
   // width: fit-content;
   text-align: center;
   background-color: brown;
@@ -188,7 +199,7 @@
   font-family: 'Kalam', cursive;
 }
 
-.art .sub-heading{
+.art .sub-heading {
   width: fit-content;
   font-family: 'Sahitya', cursive;
   background-color: indianred;
@@ -197,29 +208,29 @@
   border-top-right-radius: 20px;
 }
 
-.art .title{
+.art .title {
   font-family: 'Sahitya';
   font-weight: bold;
 }
 
 
-.left-column .card-mm{
+.left-column .card-mm {
   background-color: rgb(255, 245, 230);
 }
 
-.vip-people .card{
+.vip-people .card {
   // background-color: white;
   border: 0;
 }
 
-.vip-people .card img{
+.vip-people .card img {
   margin: 0;
   padding: 0;
   object-fit: cover;
 }
 
-.vip-people .card-body{
-  background-image: linear-gradient(rgb(255, 201, 5),rgba(255, 184, 184, 0.283));
+.vip-people .card-body {
+  background-image: linear-gradient(rgb(255, 201, 5), rgba(255, 184, 184, 0.283));
   // border-bottom-left-radius: 30px;
 }
 
@@ -231,7 +242,7 @@
   // padding-left: 20px;
 }
 
-.right-column .card{
+.right-column .card {
   margin-top: 10px;
   margin-left: 10px;
 }
@@ -244,15 +255,15 @@
   padding: 20px;
 }
 
-.fakeimg img{
+.fakeimg img {
   width: 100%;
 }
 
 .card-avatar.avatar-border.mt-n5,
 .card-avatar.mr-44 {
-    background-image: url(../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg);
-    background-size: 130%;
-    background-position: 20% 10%;
+  background-image: url(../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg);
+  background-size: 130%;
+  background-position: 20% 10%;
 }
 
 .row:after {
@@ -262,7 +273,9 @@
 }
 
 @media screen and (max-width: 800px) {
-  .left-column, .right-column {   
+
+  .left-column,
+  .right-column {
     width: 100%;
     padding: 0;
   }
@@ -275,6 +288,7 @@
     object-fit: cover;
   }
 }
+
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -469,9 +483,10 @@ p {
 }
 
 
-.text-left{
+.text-left {
   float: left;
 }
+
 /* Set gray background color and 100% height */
 .sidenav {
   padding-top: 20px;
@@ -480,14 +495,18 @@ p {
   float: right;
 }
 
-    /* On small screens, set height to 'auto' for sidenav and grid */
-    @media screen and (max-width: 767px) {
-      .sidenav {
-        height: auto;
-        padding: 15px;
-      }
-      .row.content {height:auto;} 
-    } 
+/* On small screens, set height to 'auto' for sidenav and grid */
+@media screen and (max-width: 767px) {
+  .sidenav {
+    height: auto;
+    padding: 15px;
+  }
+
+  .row.content {
+    height: auto;
+  }
+}
+
 /* Common styles for paragraphs and images */
 p {
   margin: 0;
@@ -498,15 +517,16 @@ img {
   max-width: 100%;
   height: auto;
   display: block;
-  
+
 }
 
-.container1 p, ul{
+.container1 p,
+ul {
   font-size: 1.2rem;
   text-align: justify;
 }
 
-.container1 img{
+.container1 img {
   border-radius: 18px;
   padding: 10px;
 }
@@ -518,27 +538,28 @@ img {
     flex-wrap: nowrap;
   }
 
-  .content-1{
+  .content-1 {
     display: flex;
   }
 
-  .content-2{
+  .content-2 {
     display: flex;
   }
-  
+
   // .container1 > div {
   //   // flex-basis: 50%;
   // }
-  
+
   // .container > div:nth-child(odd) {
   //   // order: 1;
   // }
-  
+
   // .container1 > div:nth-child(even) {
   //   // order: 2;
   // }
 
-  .container1 p, ul{
+  .container1 p,
+  ul {
     padding-left: 50px;
     padding-right: 50px;
     text-align: justify;
@@ -551,28 +572,138 @@ img {
     // display: flex;
     // flex-direction: column;
   }
-  .container1 img{
+
+  .container1 img {
     width: 100%;
     height: 200px;
     object-fit: cover;
   }
-  .content-1{
+
+  .content-1 {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     font-size: 1.2rem;
   }
-  .content-2{
+
+  .content-2 {
     display: flex;
     flex-direction: column-reverse;
   }
 
 }
 
-.read-more a{
+.read-more a {
   margin-bottom: 12px;
 }
 
 
-.art{
+.art {
   background-color: wheat;
+}
+
+.doctor-card {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-content: stretch;
+}
+
+
+.blockquote-custom {
+  position: relative;
+  font-size: 1.1rem;
+}
+
+.blockquote-custom-icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: -40px;
+  left: 19px;
+}
+
+.container {
+  display: grid;
+  flex-wrap: wrap;
+  gap: 15px 10px;
+  grid-template-areas:
+    "1 2"
+    "3 4";
+  // background-color: DodgerBlue;
+}
+
+.container .item img {
+  height: 200px;
+  object-fit: cover;
+}
+
+.flex-container>div {
+  background-color: #f1f1f1;
+  // width: 300px;
+  // height: 200px;
+  margin: 10px;
+  text-align: center;
+  font-size: 30px;
+}
+
+.four-types-group {
+  background-color: transparent;
+}
+
+.four-types-group a{
+  border-top: 1px solid rgb(0, 0, 0);
+  // border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  text-decoration: none;
+}
+
+.four-types-group h5{
+  color: white;
+  padding: 5px 20px 5px 20px;
+  text-shadow: 2px 2px 2px black, -2px -2px 5px black;
+}
+
+.container-four-group {
+  position: relative;
+  width: 50%;
+  max-width: 300px;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute; 
+  bottom: 0; 
+  background: rgb(0, 0, 0);
+  // background: rgba(0, 0, 0, 1); /* Black see-through */
+  color: #e20000; 
+  width: 100%;
+  transition: .5s ease;
+  opacity:0.71;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+.overlay:hover{
+  opacity: 1;
+  padding: 30px;
+  transition: 0.2s ease-in;
+  border-left: 5px solid rgb(255, 255, 255);
+  border-right: 5px solid rgb(255, 251, 28);
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+}
+
+
+.card-title:hover{
+  opacity: 1;
 }
