Updated main page

--- a/src/app/donation/donation.component.html
+++ b/src/app/donation/donation.component.html
@@ -1,1 +1,15 @@
-<p>donation works!</p>
+<div class="container">
+    <div class="item">
+      <div class="image">
+        <img src="../../assets/imgs/swami-ashu/ashu channels4_profile.jpg" alt="Responsive Image">
+      </div>
+    </div>
+    
+    <div class="item">
+      <div class="article">
+        <h1>Article Title</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non arcu nec elit pulvinar suscipit vel sed elit. Nam lacinia placerat est, sit amet luctus elit convallis eget. Mauris in arcu a ligula euismod aliquet. Nullam id nibh urna.</p>
+        <p>Pellentesque interdum malesuada odio id iaculis. Donec et justo at libero pretium placerat. Aenean eu lorem et orci pharetra pharetra. Proin commodo ligula at magna volutpat congue. Suspendisse quis purus ac lacus mollis feugiat.</p>
+      </div>
+    </div>
+  </div>
