--- a/src/app/mahamandaleswar-card/mahamandaleswar-card.component.html
+++ b/src/app/mahamandaleswar-card/mahamandaleswar-card.component.html
@@ -1,6 +1,5 @@
 <div class="p-3" href="" style="text-decoration: none;">
-
-    <div class="card text-center border-0 mb-4">
+    <div class="card card-wrap text-center mb-4">
         <div class="card-cup bg-primary"></div>
         <div class="card-body proavatar">
             <div class="card-avatar avatar-border mt-n5" style="background-image: url('{{receivedData['imgUrl']}}');">
@@ -8,7 +7,7 @@
                     <rect width="100%" height="100%" fill="#495057"></rect>
                 </svg> -->
             </div>
-            <h5 class="card-title text-primary mb-1">{{receivedData['name']}}</h5>
+            <h5 class="card-title mb-1">{{receivedData['name']}}</h5>
             <hr>
             <div>
                 <div class="">जन्म तिथि : {{receivedData['dob']}}</div>
