Production ready after music toggele change

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -196,3 +196,12 @@
   </div>
 </div>
 
+<div class="want-music" id="want-music-id">
+  <!-- <p style="font-family: 'Arya'; font-weight: bold;">संगीत <i class="bi bi-caret-right"></i></p> -->
+  <!-- <button class="btn"> -->
+    <i class="bi bi-music-note-beamed fa-2x"></i>
+    <i class="bi bi-chevron-right fa-2x"></i>
+  <!-- </button> -->
+</div>
+
+
