--- a/src/app/brandbar/brandbar.component.html
+++ b/src/app/brandbar/brandbar.component.html
@@ -1,5 +1,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<div class="bg-warning fixed-top row d-flex justify-content-center">
+<div class="bg-warning wrap d-flex justify-content-center">
         <img class="brand-image" src="../../assets/svg/brand-logo/kailash-brand-logo.png" alt="" srcset="">
-    
 </div>
