--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<nav class="navbar navbar-expand-lg ">
+<nav class="navbar fixed-top navbar-expand-lg ">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,11 +62,6 @@
           </ul>
         </li>
       </ul>
-
-      <!-- <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="खोजने के लिए लिखें" aria-label="Search">
-          <button class="btn btn-outline-secondary text-danger-emphasis" type="submit">खोजें</button>
-        </form> -->
     </div>
   </div>
 </nav>
