--- a/src/app/print-media/print-media.component.scss
+++ b/src/app/print-media/print-media.component.scss
@@ -18,3 +18,11 @@
   #image-gallery .modal-footer {
     display: block;
   }
+
+
+@media screen and (min-width: 991px) {
+
+  .whole{
+      margin-top: 40px;
+}
+}
