--- a/src/app/room-booking/room-booking.component.html
+++ b/src/app/room-booking/room-booking.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="whole">
     <div class="my-4 py-3">
       <h3 class="text-center">आश्रम में कमरा बुक करने के लिए नीचे दिये गये फॉर्म को भरें </h3>
       <div class="row">
