--- a/src/app/swami-ramchandra/swami-ramchandra.component.scss
+++ b/src/app/swami-ramchandra/swami-ramchandra.component.scss
@@ -238,3 +238,11 @@ blockquote p::after {
   display: flex;
   flex-direction: column;
 }
+
+
+@media screen and (min-width: 991px) {
+
+  .whole{
+      margin-top: 40px;
+}
+}
