--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -176,7 +176,7 @@
 <!-- Toolbar -->
 <app-brandbar class=""></app-brandbar>
 <div class="brand-nav-gap"></div>
-<app-navbar class=""></app-navbar>
+<app-navbar></app-navbar>
 <div class="toggle-bhakti d-flex col justify-content-end">
   <div class="">
     <div class="circular-border"> 
