--- a/src/app/gaushala/gaushala.component.scss
+++ b/src/app/gaushala/gaushala.component.scss
@@ -196,3 +196,11 @@
     width:100%;
     position:absolute;
     }
+
+
+@media screen and (min-width: 991px) {
+
+  .whole{
+      margin-top: 40px;
+}
+}
