--- a/src/app/gurukul/gurukul.component.scss
+++ b/src/app/gurukul/gurukul.component.scss
@@ -201,3 +201,11 @@
     width:100%;
     position:absolute;
     }
+
+
+@media screen and (min-width: 991px) {
+
+  .whole{
+      margin-top: 40px;
+}
+}
