--- a/src/app/kailash-math/kailash-math.component.scss
+++ b/src/app/kailash-math/kailash-math.component.scss
@@ -809,3 +809,10 @@ ul {
   background-color: rgb(70, 0, 0);
   opacity: 1;
 }
+
+@media screen and (min-width: 991px) {
+
+  .whole{
+      margin-top: 40px;
+}
+}
