--- a/src/app/left-column/left-column.component.html
+++ b/src/app/left-column/left-column.component.html
@@ -49,6 +49,9 @@
           के लिए महत्वपूर्ण स्थल है।</p>
       </div>
     </div>
+    <div class="d-flex justify-content-center">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/LotlHFK29lk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
   </div>
   <hr>
   <div class="m-4">
@@ -125,19 +128,6 @@
         </p>
       </div>
     </div>
-    <!-- <div class="content-3 content-1"> -->
-    <!-- <div class="col-md-6 d-flex align-items-center "> -->
-    <!-- <p>आधुनिक विद्वान श्री जितेन्द्र जी तिवारी-व्याकरणाचार्य द्वारा यहाँ साधन हीन वित्तहीन विद्यार्थियों को -->
-    <!-- आरम्भ से लेकर उच्च शिक्षा, उनके रहने एवं भोजन की व्यवस्था देकर सर्वांगीण विकास सुनिश्चित किया जाता है। -->
-    <!-- </p> -->
-    <!-- </div> -->
-    <!-- <div class="col-md-6"> -->
-    <!-- <img src="https://ik.imagekit.io/kailash/gurukul/gurukul-group-guru-1.jpg?updatedAt=1687105688733" alt="First image"> -->
-    <!-- <img
-              src="https://ik.imagekit.io/kailash/telegram/monks/tr:otf-Arya-Regular.ttf,ot-%20स्वामी%20आशुतोषानंद,ofo-bottom_left,ots-200,otc-ffffff,otbg-ff000040,pr-true/monks.jpeg"
-              alt="First image"> -->
-    <!-- </div> -->
-    <!-- </div> -->
     <div class="content-4 m-4">
       <h4 class="text-center"
         style="font-family: 'Kalam';color: rgb(220, 20, 20); text-shadow: 1px 1px 10px rgb(255, 255, 255);">
