--- a/src/app/math-karyakshetra/math-karyakshetra.component.html
+++ b/src/app/math-karyakshetra/math-karyakshetra.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="whole">
   <div class="left-column">
     <div class="sanatan-sanskriti">
       <div class="card kailash-math-art border-0 mb-4">
