--- a/src/app/pooja-booking/pooja-booking.component.scss
+++ b/src/app/pooja-booking/pooja-booking.component.scss
@@ -1,3 +1,11 @@
 .full{
     background-image: linear-gradient(rgba(255, 81, 0, 0.287), rgba(255, 255, 0, 0.24));
 }
+
+
+@media screen and (min-width: 991px) {
+
+    iframe{
+        margin-top: 40px;
+  }
+  }
