--- a/src/app/social-services-media/social-services-media.component.scss
+++ b/src/app/social-services-media/social-services-media.component.scss
@@ -2,4 +2,12 @@
     background:linear-gradient(yellow, orangered);
     padding: 20px;
   }
+
+
+@media screen and (min-width: 991px) {
+
+  .whole{
+      margin-top: 40px;
+}
+}
   
