--- a/src/app/swami-ashu/swami-ashu.component.html
+++ b/src/app/swami-ashu/swami-ashu.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="whole">
     <div class="left-column py-2">
         <div class="sanatan-sanskriti">
             <div class="card kailash-math-art border-0 mb-4">
