Production ready after books and favicon

--- a/src/app/arti-stuti/arti-stuti.component.scss
+++ b/src/app/arti-stuti/arti-stuti.component.scss
@@ -80,3 +80,11 @@ h4{
       background-color: #fdceb0;
   }
 }
+
+
+@media screen and (min-width: 991px) {
+
+  .wrap {
+      margin-top: 60px;
+  }
+}
