--- a/src/app/swami-ashu/swami-ashu.component.html
+++ b/src/app/swami-ashu/swami-ashu.component.html
@@ -71,7 +71,7 @@
                             </p>
                             <div class="">
                                 <div class="text-center p-2 mt-4">
-                                    <h4>इनकी रचनाएँ एवं उपलब्धियाँ</h4>
+                                    <h4>इनकी रचनाएँ</h4>
                                 </div>
                                 <app-achievements></app-achievements>
                             </div>
