--- a/src/app/left-column/left-column.component.html
+++ b/src/app/left-column/left-column.component.html
@@ -88,6 +88,16 @@
           </div> -->
         </div>
       </div>
+      <div class="container1 mt-5 p-3" style="border: 1px solid rgb(255, 255, 255); background-color: rgba(255, 174, 0, 0.206); border-radius: 10px;">
+        <div class="text-center">
+          <h3>
+            स्वामी जी की रचनायें
+          </h3>
+        </div>
+        <div class="d-flex justify-content-center">
+          <button type="button" class="btn btn-warning" style="border: 1px solid brown;">अन्य रचनाएँ</button>
+        </div>
+      </div>
 
     </div>
   </div>
