--- a/src/app/left-column/left-column.component.html
+++ b/src/app/left-column/left-column.component.html
@@ -95,7 +95,7 @@
           </h3>
         </div>
         <div class="d-flex justify-content-center">
-          <button type="button" class="btn btn-warning" style="border: 1px solid brown;">अन्य रचनाएँ</button>
+          <button routerLink="/books" type="button" class="btn btn-warning" style="border: 1px solid brown;">अन्य रचनाएँ</button>
         </div>
       </div>
 
