After Live on prod

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,15 +19,25 @@
     </div>
 
     <div class="d-flex navitems justify-content-center">
-        <a href="">Home</a>
-        <a href="">Helpline</a>
-        <a href="https://goo.gl/maps/3VAwtFw4ZDcXnuys6" target="_blank">How to reach</a>
-        <a href="mailto:help@kailashmath.org">Contact us</a>
+        <div class="col">
+            <a href="">Home</a>
+        </div>
+        <div class="col " style="text-align: left;">
+            <a href="">Helpline</a>
+            <p>9452108425</p>
+            <p>9457127271</p>
+        </div>
+        <div class="col">
+            <a href="https://goo.gl/maps/3VAwtFw4ZDcXnuys6" target="_blank">Map</a>
+        </div>
+        <div class="col">
+            <a href="mailto:help@kailashmath.org">Contact us</a>
+        </div>
     </div>
     <div class="d-flex justify-content-around">
         <div class="p-2 bd-highlight">&#9400; Copyright {{currentYear}}, Kailash Math Kashi Varanasi</div>
         <div class="p-2 bd-highlight">All rights reserved </div>
-        <div class="p-2 bd-highlight">Developed by </div>
+        <div class="p-2 bd-highlight">Developed by <a href="https://www.linkedin.com/in/murlidharpathak/">Murlidhar Pathak</a></div>
 
     </div>
 </div>
