--- a/src/app/left-column/left-column.component.scss
+++ b/src/app/left-column/left-column.component.scss
@@ -237,9 +237,8 @@
     // border-bottom-left-radius: 30px;
   }
   
-  .residing-monk-art .vip-people .card-mm{
-    margin: 5px;
-    padding: 5px;
+  .residing-monk-art .card{
+    padding: 2px;
   }
   
   
