--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -58,11 +58,12 @@
         background-color: transparent;
     }
     .navbar-toggler{
-        background-color: yellow;
-        border: 1px solid brown;
+        background-color: rgb(255, 203, 70);
+        // border: 2px solid rgb(151, 0, 0);
     }
     .navbar-nav{
         background-color: rgb(187, 0, 0);
+        // border: 5px solid black;
         border-radius: 20px;
     }
   }
