--- a/src/app/left-column/left-column.component.html
+++ b/src/app/left-column/left-column.component.html
@@ -459,53 +459,23 @@
 </div>
 
 <div class="art residing-monk-art my-4 rounded">
-  <h2 class="text-center heading rounded-top">मठ में निवास कर रहे मुख्य संत</h2>
-  <div class="vip-people d-flex flex-wrap justify-content-center align-content-stretch">
-    <div class="card card-mm my-2 bd-highlight" style="width: 18rem;">
+  <h5 class="text-center heading rounded-top">मठ में निवास कर रहे मुख्य संत</h5>
+  <div class="m-2 d-flex flex-wrap justify-content-center align-content-stretch">
+    <div class="card card-mm col-4 col-md-3 my-2 bd-highlight">
       <img src="https://ik.imagekit.io/kailash/residing-mukhya-sant/tr:w-600,h-400,pr-true/anantanand.jpeg"
         class="card-img-top" alt="...">
       <div class="text-center bg-warning p-1" style="font-weight: bold;">
         स्वामी अनंतानंद गिरि जी महाराज
       </div>
-      <!-- <div class="card-body">
-            <div class="card-text">
-              <div id="myElement1">
-                <p>स्वामी अनंतानंद एक संन्यासी हैं जो कैलाश मठ काशी में निवास करते हैं।
-                  उनका जीवन समर्पित है अध्यात्म और आध्यात्मिक सेवा को।</p>
-                <p class="collapse">उनकी तपस्या, शान्ति और ज्ञान से युक्त प्रवचनों से लोगों को प्रेरित करते हैं।
-                  उनके द्वारा दिया गया धार्मिक ज्ञान और मार्गदर्शन लोगों की आत्मिक विकास में सहायता करता है।
-                  स्वामी अनंतानंद एक प्रेरणा स्रोत हैं और उनके समर्पण और सेवा भाव से वे लोगों के दिलों में स्थान
-                  बनाए रखते हैं।</p>
-                <div class="text-center read-more">
-                  <a class="btn bg-light" data-bs-toggle="collapse" href="#myElement1 .collapse">Read more</a>
-                </div>
-              </div>
-            </div>
-          </div> -->
     </div>
-    <div class="card card-mm my-2 bd-highlight" style="width: 18rem;">
+    <div class="card card-mm col-4 col-md-3 my-2 bd-highlight">
       <img src="https://ik.imagekit.io/kailash/residing-mukhya-sant/tr:w-600,h-400,pr-true/shaswatanand.jpeg" class=""
         alt="...">
       <div class="text-center bg-warning p-1" style="font-weight: bold;">
         स्वामी शाश्वतानन्द गिरि जी महाराज
       </div>
-      <!-- <div class="card-body">
-            <div class="card-text">
-              <div id="myElement2">
-                <p>स्वामी अनंतानंद एक संन्यासी हैं जो कैलाश मठ काशी में निवास करते हैं।
-                  उनका जीवन समर्पित है अध्यात्म और आध्यात्मिक सेवा को।</p>
-                <p class="collapse">उनकी तपस्या, शान्ति और ज्ञान से युक्त प्रवचनों से लोगों को प्रेरित करते हैं।
-                  उनके द्वारा दिया गया धार्मिक ज्ञान और मार्गदर्शन लोगों की आत्मिक विकास में सहायता करता है।
-                  स्वामी अनंतानंद एक प्रेरणा स्रोत हैं और उनके समर्पण और सेवा भाव से वे लोगों के दिलों में स्थान
-                  बनाए रखते हैं।</p>
-                <div class="text-center read-more">
-                  <a class="btn bg-light" data-bs-toggle="collapse" href="#myElement2 .collapse">Read more</a>
-                </div>
-              </div>
-            </div>
-          </div> -->
     </div>
-    <div class="card card-mm my-2 bd-highlight" style="width: 18rem;">
+    <div class="card card-mm col-4 col-md-3 my-2 bd-highlight">
       <a href="https://ik.imagekit.io/kailash/residing-mukhya-sant/tr:w-600,h-400,pr-true/vidyanand-giri.jpeg">
         <img src="https://ik.imagekit.io/kailash/residing-mukhya-sant/tr:w-600,h-400,pr-true/vidyanand-giri.jpeg"
           class="card-img-top" alt="...">
@@ -513,23 +483,8 @@
       <div class="text-center bg-warning p-1" style="font-weight: bold;">
         स्वामी विद्यानन्द गिरि जी महाराज
       </div>
-      <!-- <div class="card-body">
-            <div class="card-text">
-              <div id="myElement3">
-                <p>स्वामी अनंतानंद एक संन्यासी हैं जो कैलाश मठ काशी में निवास करते हैं।
-                  उनका जीवन समर्पित है अध्यात्म और आध्यात्मिक सेवा को।</p>
-                <p class="collapse">उनकी तपस्या, शान्ति और ज्ञान से युक्त प्रवचनों से लोगों को प्रेरित करते हैं।
-                  उनके द्वारा दिया गया धार्मिक ज्ञान और मार्गदर्शन लोगों की आत्मिक विकास में सहायता करता है।
-                  स्वामी अनंतानंद एक प्रेरणा स्रोत हैं और उनके समर्पण और सेवा भाव से वे लोगों के दिलों में स्थान
-                  बनाए रखते हैं।</p>
-                <div class="text-center read-more">
-                  <a class="btn bg-light" data-bs-toggle="collapse" href="#myElement3 .collapse">Read more</a>
-                </div>
-              </div>
-            </div>
-          </div> -->
     </div>
-    <div class="card card-mm my-2 bd-highlight" style="width: 18rem;">
+    <div class="card card-mm col-4 col-md-3 my-2 bd-highlight">
       <a href="https://ik.imagekit.io/kailash/residing-mukhya-sant/tr:w-600,h-400,pr-true/raghavanand-ji.jpeg">
         <img src="https://ik.imagekit.io/kailash/residing-mukhya-sant/tr:w-600,h-400,pr-true/raghavanand-ji.jpeg"
           class="card-img-top" alt="...">
@@ -537,23 +492,8 @@
       <div class="text-center bg-warning p-1" style="font-weight: bold;">
         स्वामी राघवानंद गिरी जी महाराज
       </div>
-      <!-- <div class="card-body">
-            <div class="card-text">
-              <div id="myElement4">
-                <p>स्वामी अनंतानंद एक संन्यासी हैं जो कैलाश मठ काशी में निवास करते हैं।
-                  उनका जीवन समर्पित है अध्यात्म और आध्यात्मिक सेवा को।</p>
-                <p class="collapse">उनकी तपस्या, शान्ति और ज्ञान से युक्त प्रवचनों से लोगों को प्रेरित करते हैं।
-                  उनके द्वारा दिया गया धार्मिक ज्ञान और मार्गदर्शन लोगों की आत्मिक विकास में सहायता करता है।
-                  स्वामी अनंतानंद एक प्रेरणा स्रोत हैं और उनके समर्पण और सेवा भाव से वे लोगों के दिलों में स्थान
-                  बनाए रखते हैं।</p>
-                <div class="text-center read-more">
-                  <a class="btn bg-light" data-bs-toggle="collapse" href="#myElement4 .collapse">Read more</a>
-                </div>
-              </div>
-            </div>
-          </div> -->
     </div>
-    <div class="card card-mm my-2 bd-highlight" style="width: 18rem;">
+    <div class="card card-mm col-4 col-md-3 my-2 bd-highlight">
       <a href="https://ik.imagekit.io/kailash/residing-mukhya-sant/tr:w-600,h-400,pr-true/swami-ajit-anand.jpeg">
 
         <img src="https://ik.imagekit.io/kailash/residing-mukhya-sant/tr:w-600,h-400,pr-true/swami-ajit-anand.jpeg"
@@ -562,33 +502,16 @@
       <div class="text-center bg-warning p-1" style="font-weight: bold;">
         स्वामी अजीतानंद गिरी जी महाराज
       </div>
-      <!-- <div class="card-body">
-            <div class="card-text">
-              <div id="myElement5">
-                <p>स्वामी अनंतानंद एक संन्यासी हैं जो कैलाश मठ काशी में निवास करते हैं।
-                  उनका जीवन समर्पित है अध्यात्म और आध्यात्मिक सेवा को।</p>
-                <p class="collapse">उनकी तपस्या, शान्ति और ज्ञान से युक्त प्रवचनों से लोगों को प्रेरित करते हैं।
-                  उनके द्वारा दिया गया धार्मिक ज्ञान और मार्गदर्शन लोगों की आत्मिक विकास में सहायता करता है।
-                  स्वामी अनंतानंद एक प्रेरणा स्रोत हैं और उनके समर्पण और सेवा भाव से वे लोगों के दिलों में स्थान
-                  बनाए रखते हैं।</p>
-                <div class="text-center read-more">
-                  <a class="btn bg-light" data-bs-toggle="collapse" href="#myElement5 .collapse">Read more</a>
-                </div>
-              </div>
-            </div>
-          </div> -->
     </div>
 
   </div>
 </div>
 
-<div class="art poorv-mm-art my-4 rounded">
-  <h2 class="text-center heading rounded-top">मठ के पूर्व महामंडलेश्वर</h2>
-  <div class="vip-people d-flex container-fluid flex-wrap justify-content-around align-content-stretch">
-    <div class="row row-cols-lg-3 row-cols-md-2">
+<div class="art my-4 rounded">
+  <h5 class="text-center heading rounded-top">मठ के पूर्व महामंडलेश्वर</h5>
+  <div class=" d-flex px-2 flex-wrap justify-content-center">
       <app-mahamandaleswar-card *ngFor="let each of mahaMandaleswars" [receivedData]="each"
-        class="col mm-card"></app-mahamandaleswar-card>
-    </div>
+        class="col-4"></app-mahamandaleswar-card>
 
   </div>
 </div>
