--- a/src/app/mahamandaleswar-card/mahamandaleswar-card.component.html
+++ b/src/app/mahamandaleswar-card/mahamandaleswar-card.component.html
@@ -1,20 +1,19 @@
-<div class="p-3" href="" style="text-decoration: none;">
-    <div class="card card-wrap text-center mb-4">
-        <div class="card-cup bg-primary"></div>
-        <div class="card-body proavatar">
-            <div class="card-avatar avatar-border mt-n5" style="background-image: url('{{receivedData['imgUrl']}}');">
-                <!-- <svg>
-                    <rect width="100%" height="100%" fill="#495057"></rect>
-                </svg> -->
-            </div>
-            <h5 class="card-title mb-1">{{receivedData['name']}}</h5>
-            <hr>
-            <div>
-                <div class="">{{receivedData['dura']}}</div>
-                <p class="mt-2 mb-1">महामंडलेश्वर का पद संतों और आध्यात्मिक गुरुओं की महत्वपूर्ण पदवी है, </p>
+
+<div class=" p-1 justify-content-center align-items-stretch">
+    <div class="card">
+        <div class="user text-center mt-2">
+            <div class="profile">
+                <a href="{{receivedData['imgUrl']}}">
+                    <img src="{{receivedData['imgUrl']}}" class="rounded-circle" width="80">
+                </a>
             </div>
         </div>
 
+        <div class="text-center mx-2">
+            <p class="mb-0">{{receivedData['name']}}</p>
+            <span class="text-muted d-block mb-1">{{receivedData['dura']}}</span>
+        </div>
 
     </div>
+
 </div>
